[tool.poetry]
name = "notas-musicais-base"
version = "0.1.0"
description = ""
authors = ["Alison Américo <alison.americo@znc.com.br>"]
readme = "README.md"
packages = [{include = "notas_musicais_base"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
